<package>
    <name>path_navi</name>
    <version>1.0.0</version>
    <description>The path_navi package</description>

    <author>maxx@xxxx.com</author>
    <maintainer email="maxx@todo.todo">maxx</maintainer>
    <license>TODO</license>




    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
